# academic-stats-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  server.py
tests/: smoke_test.py
